--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "classnames": "^2.2.5",
     "md5": "^2.2.1",
     "npm-run-all": "^4.0.2",
     "react": "^15.6.1",
