--- a/package.json
+++ b/package.json
@@ -21,10 +21,7 @@
     "flow-watch": "^1.1.1",
     "node-sass-chokidar": "^0.0.3",
     "react-scripts": "1.0.10",
-    "react-test-renderer": "^15.6.1",
-    "redux-devtools": "^3.4.0",
-    "redux-devtools-dock-monitor": "^1.1.2",
-    "redux-devtools-log-monitor": "^1.3.0"
+    "react-test-renderer": "^15.6.1"
   },
   "scripts": {
     "flow": "flow",
