--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "start": "npm-run-all -p watch-css start-js",
     "build": "npm run build-css && react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "coverage": "jest --coverage",
+    "coverage": "npm test -- --coverage",
     "eject": "react-scripts eject"
   }
 }
