--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "md5": "^2.2.1",
+    "moment": "^2.18.1",
     "npm-run-all": "^4.0.2",
     "react": "^15.6.1",
     "react-apollo": "^1.4.15",
@@ -19,6 +20,7 @@
     "eslint-plugin-react": "^7.1.0",
     "flow-bin": "^0.49.1",
     "flow-watch": "^1.1.1",
+    "mockdate": "^2.0.2",
     "node-sass-chokidar": "^0.0.3",
     "react-scripts": "1.0.10",
     "react-test-renderer": "^15.6.1"
@@ -26,10 +28,8 @@
   "scripts": {
     "flow": "flow",
     "flow:watch": "flow-watch",
-    "build-css":
-      "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
-    "watch-css":
-      "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
+    "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
     "build": "npm run build-css && react-scripts build",
@@ -38,6 +38,9 @@
     "eject": "react-scripts eject"
   },
   "jest": {
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ],
     "collectCoverageFrom": [
       "src/**/*.js",
       "!<rootDir>/node_modules/",
