--- a/package.json
+++ b/package.json
@@ -3,27 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "classnames": "^2.2.5",
-    "md5": "^2.2.1",
-    "moment": "^2.18.1",
-    "npm-run-all": "^4.0.2",
-    "react": "^15.6.1",
-    "react-apollo": "^1.4.15",
-    "react-dom": "^15.6.1",
-    "react-router-dom": "^4.1.1",
-    "subscriptions-transport-ws": "^0.7.3"
+    "classnames": "2.2.5",
+    "md5": "2.2.1",
+    "moment": "2.18.1",
+    "npm-run-all": "4.1.1",
+    "react": "16.0.0",
+    "react-apollo": "1.4.15",
+    "react-dom": "16.0.0",
+    "react-router-dom": "4.2.2",
+    "subscriptions-transport-ws": "0.7.3"
   },
   "devDependencies": {
-    "babel-eslint": "^7.2.3",
-    "enzyme": "^2.9.1",
-    "enzyme-to-json": "^1.5.1",
-    "eslint-plugin-react": "^7.1.0",
-    "flow-bin": "^0.49.1",
-    "flow-watch": "^1.1.1",
-    "mockdate": "^2.0.2",
-    "node-sass-chokidar": "^0.0.3",
-    "react-scripts": "1.0.10",
-    "react-test-renderer": "^15.6.1"
+    "babel-eslint": "7.2.3",
+    "enzyme": "3.0.0",
+    "enzyme-adapter-react-16": "^1.0.0",
+    "enzyme-to-json": "3.0.1",
+    "eslint-plugin-react": "7.1.0",
+    "flow-bin": "0.49.1",
+    "flow-watch": "1.1.1",
+    "mockdate": "2.0.2",
+    "node-sass-chokidar": "0.0.3",
+    "react-scripts": "1.0.14",
+    "react-test-renderer": "16.0.0"
   },
   "scripts": {
     "flow": "flow",
