--- a/.flowconfig
+++ b/.flowconfig
@@ -1,7 +1,12 @@
-[ignore]
 [include]
+src
+
+[ignore]
+.*/node_modules/.*
+
 [libs]
 [options]
 module.system.node.resolve_dirname=node_modules
 module.system.node.resolve_dirname=src
+
 [lints]
