--- a/package.json
+++ b/package.json
@@ -8,18 +8,18 @@
     "moment": "2.18.1",
     "npm-run-all": "4.1.1",
     "react": "16.0.0",
-    "react-apollo": "1.4.15",
+    "react-apollo": "1.4.16",
     "react-dom": "16.0.0",
     "react-router-dom": "4.2.2",
     "subscriptions-transport-ws": "0.7.3"
   },
   "devDependencies": {
-    "babel-eslint": "7.2.3",
+    "babel-eslint": "8.0.1",
     "enzyme": "3.0.0",
-    "enzyme-adapter-react-16": "^1.0.0",
+    "enzyme-adapter-react-16": "1.0.0",
     "enzyme-to-json": "3.0.1",
-    "eslint-plugin-react": "7.1.0",
-    "flow-bin": "0.49.1",
+    "eslint-plugin-react": "7.4.0",
+    "flow-bin": "0.55.0",
     "flow-watch": "1.1.1",
     "mockdate": "2.0.2",
     "node-sass-chokidar": "0.0.3",
@@ -29,8 +29,10 @@
   "scripts": {
     "flow": "flow",
     "flow:watch": "flow-watch",
-    "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
-    "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
+    "build-css":
+      "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
+    "watch-css":
+      "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
     "build": "npm run build-css && react-scripts build",
@@ -39,9 +41,7 @@
     "eject": "react-scripts eject"
   },
   "jest": {
-    "snapshotSerializers": [
-      "enzyme-to-json/serializer"
-    ],
+    "snapshotSerializers": ["enzyme-to-json/serializer"],
     "collectCoverageFrom": [
       "src/**/*.js",
       "!<rootDir>/node_modules/",
