--- a/.eslintrc
+++ b/.eslintrc
@@ -13,7 +13,7 @@
   },
   "rules": {
     "jsx-quotes": ["error", "prefer-double"],
-    "comma-dangle": [2, "never"],
+    "comma-dangle": [2, "always-multiline"],
     "object-curly-spacing": [2, "always"],
     "no-var": 2,
     "no-unused-vars": 2,
