--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "dependencies": {
     "classnames": "2.2.5",
+    "date-fns": "^1.29.0",
     "md5": "2.2.1",
-    "moment": "2.18.1",
     "npm-run-all": "4.1.1",
     "react": "16.0.0",
     "react-apollo": "1.4.16",
@@ -18,6 +18,7 @@
     "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "1.0.0",
     "enzyme-to-json": "3.0.1",
+    "eslint": "^4.10.0",
     "eslint-plugin-react": "7.4.0",
     "flow-bin": "0.55.0",
     "flow-watch": "1.1.1",
@@ -33,6 +34,7 @@
       "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
     "watch-css":
       "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
+    "lint": "node ./node_modules/eslint/bin/eslint ./src/**/*.js",
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
     "build": "npm run build-css && react-scripts build",
