--- a/package.json
+++ b/package.json
@@ -3,29 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-cache-inmemory": "1.1.9",
+    "apollo-client": "2.2.5",
+    "apollo-link": "1.2.0",
+    "apollo-link-http": "1.4.0",
+    "apollo-link-ws": "1.0.6",
     "classnames": "2.2.5",
-    "date-fns": "^1.29.0",
+    "date-fns": "1.29.0",
+    "graphql": "0.13.0",
+    "graphql-tag": "2.8.0",
     "md5": "2.2.1",
-    "npm-run-all": "4.1.1",
-    "react": "16.0.0",
-    "react-apollo": "1.4.16",
-    "react-dom": "16.0.0",
+    "npm-run-all": "4.1.2",
+    "react": "16.2.0",
+    "react-apollo": "2.0.4",
+    "react-dom": "16.2.0",
     "react-router-dom": "4.2.2",
-    "subscriptions-transport-ws": "0.7.3"
+    "subscriptions-transport-ws": "0.9.6"
   },
   "devDependencies": {
-    "babel-eslint": "8.0.1",
-    "enzyme": "3.0.0",
-    "enzyme-adapter-react-16": "1.0.0",
-    "enzyme-to-json": "3.0.1",
-    "eslint": "^4.10.0",
-    "eslint-plugin-react": "7.4.0",
-    "flow-bin": "0.55.0",
-    "flow-watch": "1.1.1",
+    "babel-eslint": "8.2.2",
+    "enzyme": "3.3.0",
+    "enzyme-adapter-react-16": "1.1.1",
+    "enzyme-to-json": "3.3.1",
+    "eslint": "4.10.0",
+    "eslint-plugin-react": "7.7.0",
+    "flow-bin": "0.66.0",
+    "flow-watch": "1.1.2",
     "mockdate": "2.0.2",
     "node-sass-chokidar": "0.0.3",
-    "react-scripts": "1.0.14",
-    "react-test-renderer": "16.0.0"
+    "react-scripts": "1.1.1",
+    "react-test-renderer": "16.2.0"
   },
   "scripts": {
     "flow": "flow",
