--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "subscriptions-transport-ws": "0.9.6"
   },
   "devDependencies": {
+    "apollo-codegen": "^0.19.0",
     "babel-eslint": "8.2.2",
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "1.1.1",
     "enzyme-to-json": "3.3.1",
     "eslint": "4.10.0",
     "eslint-plugin-react": "7.7.0",
+    "eslint-watch": "^3.1.3",
     "flow-bin": "0.66.0",
     "flow-watch": "1.1.2",
     "mockdate": "2.0.2",
@@ -42,12 +44,17 @@
     "watch-css":
       "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
     "lint": "node ./node_modules/eslint/bin/eslint ./src/**/*.js",
+    "lint:watch": "esw src -w",
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
     "build": "npm run build-css && react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "coverage": "npm test -- --coverage",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "schema":
+      "apollo-codegen introspect-schema http://localhost:4000/graphql --output ./src/schema.json",
+    "types":
+      "apollo-codegen generate './src/**/*.js' --schema ./src/schema.json --target flow --output ./src/__generated__/types.flow.js"
   },
   "jest": {
     "snapshotSerializers": ["enzyme-to-json/serializer"],
