--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "apollo-cache-inmemory": "1.1.9",
-    "apollo-client": "2.2.5",
-    "apollo-link": "1.2.0",
-    "apollo-link-http": "1.4.0",
-    "apollo-link-ws": "1.0.6",
+    "apollo-cache-inmemory": "1.1.10",
+    "apollo-client": "2.2.6",
+    "apollo-link": "1.2.1",
+    "apollo-link-http": "1.5.3",
+    "apollo-link-ws": "1.0.7",
     "classnames": "2.2.5",
     "date-fns": "1.29.0",
-    "graphql": "0.13.0",
+    "graphql": "0.13.1",
     "graphql-tag": "2.8.0",
     "md5": "2.2.1",
     "npm-run-all": "4.1.2",
@@ -26,23 +26,21 @@
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "1.1.1",
     "enzyme-to-json": "3.3.1",
-    "eslint": "4.10.0",
+    "eslint": "4.18.2",
     "eslint-plugin-react": "7.7.0",
     "eslint-watch": "^3.1.3",
-    "flow-bin": "0.66.0",
+    "flow-bin": "0.67.1",
     "flow-watch": "1.1.2",
     "mockdate": "2.0.2",
-    "node-sass-chokidar": "0.0.3",
+    "node-sass-chokidar": "1.1.0",
     "react-scripts": "1.1.1",
     "react-test-renderer": "16.2.0"
   },
   "scripts": {
     "flow": "flow",
     "flow:watch": "flow-watch",
-    "build-css":
-      "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
-    "watch-css":
-      "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
+    "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
     "lint": "node ./node_modules/eslint/bin/eslint ./src/**/*.js",
     "lint:watch": "esw src -w",
     "start-js": "react-scripts start",
@@ -51,13 +49,13 @@
     "test": "react-scripts test --env=jsdom",
     "coverage": "npm test -- --coverage",
     "eject": "react-scripts eject",
-    "schema":
-      "apollo-codegen introspect-schema http://localhost:4000/graphql --output ./src/schema.json",
-    "types":
-      "apollo-codegen generate './src/**/*.js' --schema ./src/schema.json --target flow --output ./src/__generated__/types.flow.js"
+    "schema": "apollo-codegen introspect-schema http://localhost:4000/graphql --output ./src/schema.json",
+    "types": "apollo-codegen generate './src/**/*.js' --schema ./src/schema.json --target flow --output ./src/__generated__/types.flow.js"
   },
   "jest": {
-    "snapshotSerializers": ["enzyme-to-json/serializer"],
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ],
     "collectCoverageFrom": [
       "src/**/*.js",
       "!<rootDir>/node_modules/",
