--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "apollo-link-ws": "1.0.7",
     "classnames": "2.2.5",
     "date-fns": "1.29.0",
-    "graphql": "0.13.1",
+    "graphql": "^0.13.0",
     "graphql-tag": "2.8.0",
+    "humanize-duration": "^3.12.1",
     "md5": "2.2.1",
     "npm-run-all": "4.1.2",
+    "pluralize": "^7.0.0",
     "react": "16.2.0",
     "react-apollo": "2.0.4",
     "react-dom": "16.2.0",
     "react-router-dom": "4.2.2",
+    "styled-components": "^3.2.1",
     "subscriptions-transport-ws": "0.9.6"
   },
   "devDependencies": {
