--- a/package.json
+++ b/package.json
@@ -10,28 +10,33 @@
     "apollo-link-ws": "1.0.7",
     "classnames": "2.2.5",
     "date-fns": "1.29.0",
+    "formik": "^0.11.11",
     "graphql": "^0.13.0",
     "graphql-tag": "2.8.0",
-    "humanize-duration": "^3.12.1",
+    "humanize-duration": "3.12.1",
     "md5": "2.2.1",
     "npm-run-all": "4.1.2",
-    "pluralize": "^7.0.0",
+    "pluralize": "7.0.0",
     "react": "16.2.0",
-    "react-apollo": "2.0.4",
+    "react-apollo": "2.1.0-rc.3",
     "react-dom": "16.2.0",
+    "react-icons-kit": "^1.0.7",
+    "react-lazyload": "2.3.0",
     "react-router-dom": "4.2.2",
-    "styled-components": "^3.2.1",
-    "subscriptions-transport-ws": "0.9.6"
+    "styled-components": "3.2.1",
+    "subscriptions-transport-ws": "0.9.6",
+    "track-duration": "0.1.0",
+    "yup": "^0.24.1"
   },
   "devDependencies": {
-    "apollo-codegen": "^0.19.0",
+    "apollo-codegen": "0.19.0",
     "babel-eslint": "8.2.2",
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "1.1.1",
     "enzyme-to-json": "3.3.1",
     "eslint": "4.18.2",
     "eslint-plugin-react": "7.7.0",
-    "eslint-watch": "^3.1.3",
+    "eslint-watch": "3.1.3",
     "flow-bin": "0.67.1",
     "flow-watch": "1.1.2",
     "mockdate": "2.0.2",
