--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "md5": "2.2.1",
     "npm-run-all": "4.1.2",
     "pluralize": "7.0.0",
-    "react": "16.2.0",
+    "react": "^16.3.0-alpha.1",
     "react-apollo": "2.1.0-rc.3",
-    "react-dom": "16.2.0",
+    "react-dom": "^16.3.0-alpha.1",
     "react-icons-kit": "^1.0.7",
     "react-lazyload": "2.3.0",
     "react-router-dom": "4.2.2",
@@ -57,7 +57,7 @@
     "test": "react-scripts test --env=jsdom",
     "coverage": "npm test -- --coverage",
     "eject": "react-scripts eject",
-    "schema": "apollo-codegen introspect-schema http://localhost:4000/graphql --output ./src/schema.json",
+    "schema": "apollo-codegen introspect-schema http://localhost:4000 --output ./src/schema.json",
     "types": "apollo-codegen generate './src/**/*.js' --schema ./src/schema.json --target flow --output ./src/__generated__/types.flow.js"
   },
   "jest": {
