--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "apollo-cache-inmemory": "1.1.10",
-    "apollo-client": "2.2.6",
+    "apollo-cache-inmemory": "1.1.11",
+    "apollo-client": "2.2.7",
     "apollo-link": "1.2.1",
     "apollo-link-http": "1.5.3",
     "apollo-link-ws": "1.0.7",
@@ -23,9 +23,9 @@
     "react-icons-kit": "^1.0.7",
     "react-lazyload": "2.3.0",
     "react-router-dom": "4.2.2",
-    "styled-components": "3.2.1",
+    "styled-components": "3.2.3",
     "subscriptions-transport-ws": "0.9.6",
-    "track-duration": "0.1.0",
+    "track-duration": "0.1.1",
     "yup": "^0.24.1"
   },
   "devDependencies": {
@@ -33,22 +33,30 @@
     "babel-eslint": "8.2.2",
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "1.1.1",
-    "enzyme-to-json": "3.3.1",
+    "enzyme-to-json": "3.3.3",
     "eslint": "4.18.2",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-flowtype": "^2.46.1",
+    "eslint-plugin-graphql": "^1.5.0",
     "eslint-plugin-react": "7.7.0",
     "eslint-watch": "3.1.3",
-    "flow-bin": "0.67.1",
+    "flow-bin": "0.68.0",
     "flow-watch": "1.1.2",
+    "husky": "^0.14.3",
+    "lint-staged": "^7.0.0",
     "mockdate": "2.0.2",
     "node-sass-chokidar": "1.1.0",
+    "prettier": "^1.11.1",
     "react-scripts": "1.1.1",
     "react-test-renderer": "16.2.0"
   },
   "scripts": {
     "flow": "flow",
     "flow:watch": "flow-watch",
-    "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
-    "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
+    "build-css":
+      "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
+    "watch-css":
+      "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
     "lint": "node ./node_modules/eslint/bin/eslint ./src/**/*.js",
     "lint:watch": "esw src -w",
     "start-js": "react-scripts start",
@@ -57,13 +65,20 @@
     "test": "react-scripts test --env=jsdom",
     "coverage": "npm test -- --coverage",
     "eject": "react-scripts eject",
-    "schema": "apollo-codegen introspect-schema http://localhost:4000 --output ./src/schema.json",
-    "types": "apollo-codegen generate './src/**/*.js' --schema ./src/schema.json --target flow --output ./src/__generated__/types.flow.js"
+    "schema":
+      "apollo-codegen introspect-schema http://localhost:4000 --output ./src/schema.json",
+    "types":
+      "apollo-codegen generate './src/**/*.js' --schema ./src/schema.json --target flow-modern",
+    "precommit": "lint-staged"
+  },
+  "lint-staged": {
+    "linters": {
+      "*.js": ["prettier --write", "eslint --fix", "git add"]
+    },
+    "ignore": ["**/__generated__/**/*.js"]
   },
   "jest": {
-    "snapshotSerializers": [
-      "enzyme-to-json/serializer"
-    ],
+    "snapshotSerializers": ["enzyme-to-json/serializer"],
     "collectCoverageFrom": [
       "src/**/*.js",
       "!<rootDir>/node_modules/",
