--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "apollo-link": "1.2.1",
     "apollo-link-http": "1.5.3",
     "apollo-link-ws": "1.0.7",
-    "classnames": "2.2.5",
     "date-fns": "1.29.0",
     "formik": "^0.11.11",
     "graphql": "^0.13.0",
     "graphql-tag": "2.8.0",
     "humanize-duration": "3.12.1",
+    "idb": "^2.1.0",
     "md5": "2.2.1",
     "npm-run-all": "4.1.2",
     "pluralize": "7.0.0",
@@ -53,32 +53,33 @@
   "scripts": {
     "flow": "flow",
     "flow:watch": "flow-watch",
-    "build-css":
-      "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
-    "watch-css":
-      "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
     "lint": "node ./node_modules/eslint/bin/eslint ./src/**/*.js",
     "lint:watch": "esw src -w",
-    "start-js": "react-scripts start",
-    "start": "npm-run-all -p watch-css start-js",
-    "build": "npm run build-css && react-scripts build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "coverage": "npm test -- --coverage",
     "eject": "react-scripts eject",
-    "schema":
-      "apollo-codegen introspect-schema http://localhost:4000 --output ./src/schema.json",
-    "types":
-      "apollo-codegen generate './src/**/*.js' --schema ./src/schema.json --target flow-modern",
+    "schema": "apollo-codegen introspect-schema http://localhost:4000 --output ./src/schema.json",
+    "types": "apollo-codegen generate './src/**/*.js' --schema ./src/schema.json --target flow-modern",
     "precommit": "lint-staged"
   },
   "lint-staged": {
     "linters": {
-      "*.js": ["prettier --write", "eslint --fix", "git add"]
+      "*.js": [
+        "prettier --write",
+        "eslint --fix",
+        "git add"
+      ]
     },
-    "ignore": ["**/__generated__/**/*.js"]
+    "ignore": [
+      "**/__generated__/**/*.js"
+    ]
   },
   "jest": {
-    "snapshotSerializers": ["enzyme-to-json/serializer"],
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ],
     "collectCoverageFrom": [
       "src/**/*.js",
       "!<rootDir>/node_modules/",
