--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "apollo-codegen": "0.19.0",
     "babel-eslint": "8.2.2",
+    "cypress": "^2.1.0",
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "1.1.1",
     "enzyme-to-json": "3.3.3",
@@ -62,7 +63,8 @@
     "eject": "react-scripts eject",
     "schema": "apollo-codegen introspect-schema http://localhost:4000 --output ./src/schema.json",
     "types": "apollo-codegen generate './src/**/*.js' --schema ./src/schema.json --target flow-modern",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "test:e2e": "cypress open"
   },
   "lint-staged": {
     "linters": {
