--- a/package.json
+++ b/package.json
@@ -9,45 +9,44 @@
     "apollo-link-http": "1.5.3",
     "apollo-link-ws": "1.0.7",
     "date-fns": "1.29.0",
-    "formik": "^0.11.11",
-    "graphql": "^0.13.0",
+    "formik": "0.11.11",
+    "graphql": "0.13.2",
     "graphql-tag": "2.8.0",
-    "humanize-duration": "3.12.1",
-    "idb": "^2.1.0",
+    "humanize-duration": "3.14.0",
+    "idb": "2.1.1",
     "md5": "2.2.1",
     "npm-run-all": "4.1.2",
     "pluralize": "7.0.0",
-    "react": "^16.3.0-alpha.1",
-    "react-apollo": "2.1.0-rc.3",
-    "react-dom": "^16.3.0-alpha.1",
-    "react-icons-kit": "^1.0.7",
+    "react": "16.3.0-alpha.1",
+    "react-apollo": "2.1.0",
+    "react-dom": "16.3.0-alpha.1",
+    "react-icons-kit": "1.0.7",
     "react-lazyload": "2.3.0",
     "react-router-dom": "4.2.2",
     "styled-components": "3.2.3",
-    "subscriptions-transport-ws": "0.9.6",
+    "subscriptions-transport-ws": "0.9.7",
     "track-duration": "0.1.1",
-    "yup": "^0.24.1"
+    "yup": "0.24.1"
   },
   "devDependencies": {
     "apollo-codegen": "0.19.0",
     "babel-eslint": "8.2.2",
-    "cypress": "^2.1.0",
+    "cypress": "2.1.0",
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "1.1.1",
     "enzyme-to-json": "3.3.3",
-    "eslint": "4.18.2",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-flowtype": "^2.46.1",
-    "eslint-plugin-graphql": "^1.5.0",
+    "eslint": "4.19.1",
+    "eslint-config-prettier": "2.9.0",
+    "eslint-plugin-flowtype": "2.46.1",
+    "eslint-plugin-graphql": "1.5.0",
     "eslint-plugin-react": "7.7.0",
     "eslint-watch": "3.1.3",
     "flow-bin": "0.68.0",
-    "flow-watch": "1.1.2",
-    "husky": "^0.14.3",
-    "lint-staged": "^7.0.0",
+    "flow-watch": "1.1.3",
+    "husky": "0.14.3",
+    "lint-staged": "7.0.0",
     "mockdate": "2.0.2",
-    "node-sass-chokidar": "1.1.0",
-    "prettier": "^1.11.1",
+    "prettier": "1.11.1",
     "react-scripts": "1.1.1",
     "react-test-renderer": "16.2.0"
   },
@@ -64,7 +63,7 @@
     "schema": "apollo-codegen introspect-schema http://localhost:4000 --output ./src/schema.json",
     "types": "apollo-codegen generate './src/**/*.js' --schema ./src/schema.json --target flow-modern",
     "precommit": "lint-staged",
-    "test:e2e": "cypress open"
+    "cypress": "cypress open"
   },
   "lint-staged": {
     "linters": {
